--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-torch==1.9.0+cu102
-tqdm==4.48.2
-transformers==4.8.2
+torch==1.13.1
+torchaudio==0.13.1
+torchvision==0.14.1
+tqdm==4.64.1
+transformers==4.26.0
 pytorch-crf==0.7.2
